--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "license": "MIT",
   "scripts": {
-    "postinstall": "npx husky install && npx playwright install",
+    "postinstall": "husky & playwright install",
     "clean:dist": "npx rimraf dist",
     "clean:report": "npx rimraf playwright-report",
     "clean:deps": "npx rimraf high-level-dependencies.html",
@@ -31,32 +31,32 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "core-js": "^3.35.1",
+    "core-js": "^3.36.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.3"
+    "react-router-dom": "^6.22.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.7",
+    "@babel/core": "^7.23.9",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/preset-env": "^7.23.8",
+    "@babel/preset-env": "^7.23.9",
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
-    "@builder.io/partytown": "^0.9.0",
-    "@commitlint/cli": "^18.5.0",
-    "@commitlint/config-conventional": "^18.5.0",
-    "@playwright/test": "^1.41.1",
+    "@builder.io/partytown": "^0.9.2",
+    "@commitlint/cli": "^18.6.1",
+    "@commitlint/config-conventional": "^18.6.2",
+    "@playwright/test": "^1.41.2",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
-    "@types/react": "^18.2.48",
-    "@types/react-dom": "^18.2.18",
+    "@types/react": "^18.2.56",
+    "@types/react-dom": "^18.2.19",
     "@types/react-router-dom": "^5.3.3",
-    "@typescript-eslint/eslint-plugin": "^6.19.1",
-    "@typescript-eslint/parser": "^6.19.1",
+    "@typescript-eslint/eslint-plugin": "^7.0.1",
+    "@typescript-eslint/parser": "^7.0.1",
     "autoprefixer": "^10.4.17",
     "babel-loader": "^9.1.3",
-    "css-loader": "^6.9.1",
+    "css-loader": "^6.10.0",
     "cssnano": "^6.0.3",
-    "dependency-cruiser": "^16.0.0",
+    "dependency-cruiser": "^16.2.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
@@ -66,28 +66,29 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
-    "eslint-plugin-sonarjs": "^0.23.0",
-    "eslint-plugin-unicorn": "^50.0.1",
+    "eslint-plugin-simple-import-sort": "^12.0.0",
+    "eslint-plugin-sonarjs": "^0.24.0",
+    "eslint-plugin-unicorn": "^51.0.1",
     "express": "^4.18.2",
     "file-loader": "^6.2.0",
     "filemanager-webpack-plugin": "^8.0.0",
     "html-webpack-plugin": "^5.6.0",
-    "husky": "^8.0.3",
-    "mini-css-extract-plugin": "^2.7.7",
+    "husky": "^9.0.11",
+    "mini-css-extract-plugin": "^2.8.0",
     "nodemon": "^3.0.3",
-    "postcss": "^8.4.33",
-    "postcss-loader": "^8.0.0",
-    "prettier": "^3.2.4",
+    "postcss": "^8.4.35",
+    "postcss-loader": "^8.1.0",
+    "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "react-refresh": "^0.14.0",
-    "sass": "^1.70.0",
-    "sass-loader": "^14.0.0",
+    "sass": "^1.71.0",
+    "sass-loader": "^14.1.0",
     "tailwindcss": "^3.4.1",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.3",
-    "webpack": "^5.89.0",
+    "webpack": "^5.90.2",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^5.0.2"
   }
 }
+
